[package]
name = "jest_lint"
version = "0.1.3"
edition = "2021"
authors = ["Nick Bolton <nick@symless.com>"]
license = "MIT"
description = "Lint your Jest unit tests to find problems"
readme = "README.md"
homepage = "https://github.com/symless/jest-lint"
repository = "https://github.com/symless/jest-lint"
keywords = ["cli", "jest", "lint"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
colored = "2.1"
regex = "1.10"
thiserror = "1.0"
walkdir = "2.5"
