[package]
name = "jest_lint"
version = "0.1.5"
edition = "2024"
authors = ["Nick Bolton <nick@symless.com>"]
license = "MIT"
description = "Lint your Jest unit tests to find problems"
readme = "README.md"
homepage = "https://github.com/symless/jest-lint"
repository = "https://github.com/symless/jest-lint"
keywords = ["cli", "jest", "lint"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6", features = ["derive", "string"] }
colored = "3.1"
glob-match = "0.2"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
